--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ message(STATUS "CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
 
 
 add_subdirectory(libcnary)
-#add_subdirectory(src)
+add_subdirectory(src)
 #add_subdirectory(tools)
