--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,4 @@ message(STATUS "CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
 
 add_subdirectory(libcnary)
 add_subdirectory(src)
-#add_subdirectory(tools)
+add_subdirectory(tools)
