--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,9 +42,30 @@ add_library(plist++ SHARED
         Structure.cpp
         Uid.cpp)
 
+set(C++HEADERS ${CMAKE_SOURCE_DIR}/include/plist/Array.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Boolean.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Data.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Date.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Dictionary.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Integer.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Key.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Node.h
+        ${CMAKE_SOURCE_DIR}/include/plist/plist.h
+        ${CMAKE_SOURCE_DIR}/include/plist/plist++.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Real.h
+        ${CMAKE_SOURCE_DIR}/include/plist/String.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Structure.h
+        ${CMAKE_SOURCE_DIR}/include/plist/Uid.h)
+
+set_target_properties(plist PROPERTIES PUBLIC_HEADER "${C++HEADERS}")
+
 set_target_properties(plist++  PROPERTIES VERSION 2.2.1 
                                           SOVERSION 2
                                           DEBUG_POSTFIX D)
 
 target_link_libraries(plist++ PUBLIC plist)
 
+install(TARGETS plist plist++
+        EXPORT plistutil_export
+        PUBLIC_HEADER
+          DESTINATION include/plist)
